ajout des première ligne de code

--- a/style.css
+++ b/style.css
@@ -1,3 +1,48 @@
-h1 {
-    color: red;
+@font_face 
+{
+	font-family: 'raleway';
+	src: url('fonts/raleway/Raleway-Regular.eot');
+	src: url('fonts/raleway/Raleway-Regular.eot?#iefix') format('embedded-opentype'),
+		 url('fonts/raleway/Raleway-Regular.woff') format('woff'),
+		 url('fonts/raleway/Raleway-Regular.ttf') format('truetype'),
+		 url('fonts/raleway/Raleway-Regular.svg?#raleway') format('svg');
 }
+
+*
+{
+    font-family: 'raleway';
+}
+
+
+
+
+
+
+
+/* Header */
+
+img 
+{
+	width: 7em;
+	height: 3em;
+}
+
+.title, .p-under-title
+{
+	display: flex;
+	height: 15px;
+}
+
+
+
+
+
+
+/* Section */
+
+
+
+
+
+
+/* Footer */
