--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ header
 
 /* Section */
 
+input
+{
+    margin: .4rem 0;
+}
 
 
 
@@ -92,3 +96,13 @@ header
 
 
 /* Footer */
+
+
+
+
+
+
+
+
+
+
