--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 /* Header */
 
-img 
+.logo_reservia 
 {
 	width: 7em;
 	height: 3em;
@@ -79,14 +79,54 @@ header
 
 
 /* Section */
-
-input
+.search_city
 {
-    margin: .4rem 0;
+	display: flex;
 }
 
+.search_city img
+{
+	width: 20px;
+	height: 20px;
+	background-color: #F2F2F2;
+	margin-right: 0px;
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-bottom: 8px;
+	border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+}
 
+.search_city input
+{
+	margin-bottom: -10px;
+	width: 190px;
+	height: 32px;
+}
 
+.search_city label
+{
+	margin-top: 7px;
+	margin-left: 10px;
+	background-color: #0065FC;
+	background-size: 50px;
+	color: white;
+	width: 85px;
+	height: 26px;
+	padding-left: 20px;
+	border-left-width: 0px;
+	border-left-style: solid;
+	border-top-width: 0px;
+	border-top-style: solid;
+	margin-left: 0px;
+	padding-right: 10px;
+	padding-top: 10px;
+	margin-top: 0px;
+	padding-bottom: 2px;
+	border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
 
 
 
