--- a/style.css
+++ b/style.css
@@ -150,7 +150,6 @@ header
 	padding-top: 12px;
 	padding-bottom: 12px;
 	padding-right: 20px;
-	padding-left: 20px;
 }
 
 .filters
@@ -174,6 +173,7 @@ header
     border-bottom-right-radius: 25px;
 	border-top-left-radius: 25px;
 	border-bottom-left-radius: 25px;
+	padding-left: 50px;
 }
 
 .filters p:hover
@@ -183,8 +183,8 @@ header
 
 .filters img
 {
-	height: 20px;
-	width: 20px;
+	height: 43px;
+	width: 43px;
 	border: solid; 
 	border-bottom: 2px;
 	border-bottom-style: solid;
@@ -202,6 +202,42 @@ header
 	margin-right: 9px;
 	color: #DEEBFF; 
 	background-color: #DEEBFF;
+	position: absolute;
+	top: 243.917px;
+}
+
+.icon1
+{
+	left: 124.25px;
+}
+
+.icon2
+{
+	left: 320px;
+}
+
+.icon3
+{
+	left: 478px;
+}
+
+.icon4
+{
+	left: 669px;
+}
+
+.info
+{
+	display: flex;
+}
+
+.info img
+{
+	height: 30px;
+	width: 30px;
+	float: left;
+	padding-top: 10.50px;
+	padding-right: 8px;
 }
 
 
@@ -210,9 +246,52 @@ header
 
 
 
+
+/* Article */
+
+.marseille_accommodation
+{
+	margin-left: 32px;
+	background-color: #F2F2F2;
+	border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+	border-top-left-radius: 25px;
+	border-bottom-left-radius: 25px;
+}
+
+.marseille_accommodation h1
+{
+	padding-top: 30px;
+    padding-left: 25px;
+	z-index: 62px;
+}
+
+.marseille_accommodation img
+{
+	height: 100px;
+	width: 190px;
+	padding-left: 32px;
+}
+
+#accommodation_images
+{
+	display: flex;
+	justify-content: space-around; 
+	padding-bottom: 32px;
+}
+
+
+
+
+
+
 /* Footer */
 
-
+/* footer */
+/* { */
+	/* margin-left: 32px; */
+	/* margin-top: 32px; */
+/* } */
 
 
 
