--- a/style.css
+++ b/style.css
@@ -270,7 +270,20 @@ header
 {
 	height: 100px;
 	width: 190px;
-	padding-left: 32px;
+	border-top-right-radius: 25px;
+	border-top-left-radius: 25px;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+	border-top-width: 4px;
+	border-top-style: solid;
+	border-right-width: 4px;
+	border-right-style: solid;
+	border-left-width: 4px;
+	border-left-style: solid;
+	border-bottom-style: solid;
+	border-bottom-width: 70px;
+	background-color: white;
+	border-color: white;
 }
 
 #accommodation_images
