--- a/style.css
+++ b/style.css
@@ -298,11 +298,11 @@ header
 	padding-bottom: 32px;
     margin-right: 150px;
     margin-left: 150px;
-}}
+}
 
 .accommodation_image1
 {
-	/* margin-bottom: 30px; */
+	margin-bottom: 30px;
 }
 
 
