--- a/style.css
+++ b/style.css
@@ -94,15 +94,12 @@ header
 .search_city img
 {
 	background-color: #F2F2F2;
-	margin-right: 0px;
-	padding-top: 10px;
-	padding-right: 10px;
-	padding-left: 10px;
+	height: 15px;
+	width: 12px;
+	padding: 12px;
+	padding-top: 11px;
 	border-top-left-radius: 12px;
-    border-bottom-left-radius: 12px;
-	height: 17px;
-	width: 17px;
-	padding-bottom: 11px;
+	border-bottom-left-radius: 12px;
 }
 
 .search_city input
@@ -116,22 +113,13 @@ header
 
 .search_city label
 {
-	margin-top: 7px;
-	margin-left: 10px;
 	background-color: #0065FC;
 	background-size: 50px;
 	color: white;
 	width: 85px;
 	height: 26px;
-	padding-left: 20px;
-	border-left-width: 0px;
-	border-left-style: solid;
-	border-top-width: 0px;
-	border-top-style: solid;
-	margin-left: 0px;
-	padding-right: 20px;
+	padding: 20px; 
 	padding-top: 10px;
-	margin-top: 0px;
 	padding-bottom: 2px;
 	border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
@@ -159,21 +147,12 @@ header
 
 .filters p
 {
-	border: solid; 
-	border-bottom: 2px;
-	border-bottom-style: solid;
-	border-top: 2px;
-	border-top-style: solid;
-	border-right: 2px;
-	border-right-style: solid;
-	border-left: 2px;
-	border-left-style: solid;
+	position: relative;
+	border: 2px;
+	border-style: solid;
+	border-radius: 25px;
 	border-color: #F2F2F2;
-	border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-	border-top-left-radius: 25px;
-	border-bottom-left-radius: 25px;
-	padding-left: 50px;
+	padding-left: 55px;
 }
 
 .filters p:hover
@@ -185,71 +164,31 @@ header
 
 .filters img
 {
-	height: 43px;
-	width: 43px;
-	border: solid; 
-	border-bottom: 2px;
-	border-bottom-style: solid;
-	border-top: 2px;
-	border-top-style: solid;
-	border-right: 2px;
-	border-right-style: solid;
-	border-left: 2px;
-	border-left-style: solid;
-	border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-	border-top-left-radius: 25px;
-	border-bottom-left-radius: 25px;
-	float: left;
-	margin-right: 9px;
-	color: #DEEBFF; 
+	height: 25px;
+	border-width: 9px;
+	border-style: solid; 
+	border-radius: 20px;
+	color: #DEEBFF;
 	background-color: #DEEBFF;
 	position: absolute;
-	top: 243.917px;
-}
-
-.icon1
-{
-	left: 124.25px;
-}
-
-.icon2
-{
-	left: 320px;
-}
-
-.icon3
-{
-	left: 478px;
-}
-
-.icon4
-{
-	left: 669px;
+	top: 0px;
+	left: 0px;
 }
 
 .info
 {
 	display: flex;
+	position: relative;
+	padding-left: 15px;
 }
 
 .info img
 {
-	height: 30px;
-	width: 30px;
-	float: left;
-	padding-top: 10.50px;
-	padding-right: 8px;
+	height: 12px;
+	position: absolute;
+	left: 0px;
+	top: 19px;
 }
-
-
-
-
-
-
-
-
-/* Article */
 
 .marseille_accommodation
 {
@@ -257,10 +196,7 @@ header
 	width: 1000px;
 	margin-left: 32px;
 	background-color: #F2F2F2;
-	border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-	border-top-left-radius: 25px;
-	border-bottom-left-radius: 25px;
+	border-radius: 25px
 }
 
 .marseille_accommodation h1
@@ -268,26 +204,6 @@ header
 	padding-top: 30px;
     padding-left: 25px;
 	z-index: 62px;
-}
-
-.marseille_accommodation img
-{
-	height: 100px;
-	width: 190px;
-	border-top-right-radius: 25px;
-	border-top-left-radius: 25px;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-	border-top-width: 4px;
-	border-top-style: solid;
-	border-right-width: 4px;
-	border-right-style: solid;
-	border-left-width: 4px;
-	border-left-style: solid;
-	border-bottom-style: solid;
-	border-bottom-width: 70px;
-	background-color: white;
-	border-color: white;
 }
 
 #accommodation_images
@@ -300,12 +216,30 @@ header
     margin-left: 150px;
 }
 
-.accommodation_image1
+.accommodation_image
 {
+	height: 100px;
+	width: 190px;
+	border-top-right-radius: 25px;
+	border-top-left-radius: 25px;
+	border-width: 4px;
+	border-bottom-width: 0px;
+	border-style: solid;
+	background-color: white;
+	border-color: white;
 	margin-bottom: 30px;
 }
 
+.star_image
+{
+	height: 20px;
+	width: 20px;
+}
 
+/* border-radius: 25px; */
+/* border;;; */
+/* opti opti opti */
+/* changer les pics depuis font awesome */
 
 
 /* Footer */
