--- a/style.css
+++ b/style.css
@@ -444,19 +444,20 @@ header
 
 .activities_figure1
 {
-    display: flex;
+	display: flex;
 	flex-flow: column;
-    margin: 0px;
-	width: 350px;
+	float: left;
+	width: 300px;
 	box-shadow: 1px 1px 12px #cac7c6;
 	border-radius: 25px;
+	margin-left: 0px; 
 }
 
 .activities_img1
 {
 	object-fit: cover;
 	height: 450px;
-	width: 350px;
+	width: 300px;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px;
 }
@@ -475,26 +476,29 @@ header
 
 
 
-/* image 2 */
+/* image 2 & div 1 */
+
+.activities_div1
+{
+	display: flex;
+	flex-flow: wrap;
+	width: 300px;
+}
 
 .activities_figure2
 {
-    display: flex;
-	position: absolute; 
-	flex-flow: column;
-    margin: 0px;
-	width: 350px;
 	box-shadow: 1px 1px 12px #cac7c6;
 	border-radius: 25px;
-	top: 1135.88px;
-	left: 430px;
+	height: 248px;
+	margin-left: 0px; 
+	margin-bottom: 30px;
 }
 
 .activities_img2
 {
 	object-fit: cover;
-	height: 220px;
-	width: 350px;
+	height: 187px;
+	width: 300px;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px;
 }
@@ -517,22 +521,17 @@ header
 
 .activities_figure3
 {
-    display: flex;
-	position: absolute; 
-	flex-flow: column;
-    margin: 0px;
-	width: 350px;
 	box-shadow: 1px 1px 12px #cac7c6;
 	border-radius: 25px;
-	top: 1442.88px;
-	left: 430px;
+	height: 208px;
+	margin-left: 0px; 
 }
 
 .activities_img3
 {
 	object-fit: cover;
-	height: 144px;
-	width: 350px;
+	height: 147px;
+	width: 300px;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px;
 }
@@ -545,6 +544,113 @@ header
 }
 
 .activities_figcaption3 p 
+{
+	padding-left: 20px;
+}
+
+
+
+/* image 4 & div 2*/
+
+.activities_div2
+{
+	display: flex;
+	flex-flow: wrap;
+	width: 300px;
+}
+
+.activities_figure4
+{
+	box-shadow: 1px 1px 12px #cac7c6;
+	border-radius: 25px;
+	margin-left: 0px;
+	height: 501px;
+	width: 300px;
+}
+
+.activities_img4
+{
+	object-fit: cover;
+	height: 450px;
+	width: 300px;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+}
+
+.activities_figcaption4
+{
+    background-color: #FFF;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+}
+
+.activities_figcaption4 p 
+{
+	padding-left: 20px;
+}
+
+
+
+/* image 5 */
+
+.activities_figure5
+{
+	box-shadow: 1px 1px 12px #cac7c6;
+	border-radius: 25px;
+	height: 208px;
+	margin-left: 0px; 
+}
+
+.activities_img5
+{
+	object-fit: cover;
+	height: 147px;
+	width: 300px;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+}
+
+.activities_figcaption5
+{
+    background-color: #FFF;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+}
+
+.activities_figcaption5 p 
+{
+	padding-left: 20px;
+}
+
+
+
+/* image 6 */
+
+.activities_figure6
+{
+	box-shadow: 1px 1px 12px #cac7c6;
+	border-radius: 25px;
+	height: 281px;
+	margin-left: 0px; 
+}
+
+.activities_img6
+{
+	object-fit: cover;
+	height: 220px;
+	width: 300px;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+}
+
+.activities_figcaption6
+{
+    background-color: #FFF;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+}
+
+.activities_figcaption6 p 
 {
 	padding-left: 20px;
 }
