--- a/style.css
+++ b/style.css
@@ -430,7 +430,7 @@ header
 
 
 
-/* 3rd section */
+/* 3rd section & div */
 
 .third_section
 {
@@ -438,48 +438,44 @@ header
 	margin-top: 60px;
 }
 
+.third_section h1
+{
+	margin-bottom: 9px;
+}
+
 .activities_div1
 {
 	display: flex;
 }
 
+
+
+/* all image */
+
 .activities_figure
 {
-	
-}
-
-
-/* image 1 */
-
-.activities_figure1
-{
 	width: 300px;
-	height: 501px;
+	height: 487px;
+	margin-left: 0px; 
 	box-shadow: 1px 1px 12px #cac7c6;
 	border-radius: 25px;
-	margin-left: 0px; 
-	width: 300px;
 }
 
-.activities_img1
+.activities_figcaption p
+{
+	padding-left: 20px;
+}
+
+
+/* image 1 & 4 */
+
+.activities_img1-4
 {
 	object-fit: cover;
-	height: 442px;
+	height: 425px;
 	width: 300px;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px;
-}
-
-.activities_figcaption1
-{
-    background-color: #FFF;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-}
-
-.activities_figcaption1 p 
-{
-	padding-left: 20px;
 }
 
 
@@ -488,33 +484,21 @@ header
 
 .activities_figure2
 {
-	box-shadow: 1px 1px 12px #cac7c6;
-	border-radius: 25px;
-	height: 248px;
+	height: 256px;
+	width: 300px;
 	margin-left: 0px; 
 	margin-bottom: 30px;
-	width: 300px;
+	box-shadow: 1px 1px 12px #cac7c6;
+	border-radius: 25px;
 }
 
 .activities_img2
 {
 	object-fit: cover;
-	height: 187px;
+	height: 195px;
 	width: 300px;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px;
-}
-
-.activities_figcaption2
-{
-    background-color: #FFF;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-}
-
-.activities_figcaption2 p 
-{
-	padding-left: 20px;
 }
 
 
@@ -523,80 +507,34 @@ header
 
 .activities_figure3
 {
-	box-shadow: 1px 1px 12px #cac7c6;
-	border-radius: 25px;
-	height: 208px;
+	height: 202px;
 	width: 300px;
 	margin-left: 0px; 
+	box-shadow: 1px 1px 12px #cac7c6;
+	border-radius: 25px;
 }
 
 .activities_img3
 {
 	object-fit: cover;
-	height: 147px;
+	height: 139px;
 	width: 300px;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px;
 }
 
-.activities_figcaption3
-{
-    background-color: #FFF;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-}
-
-.activities_figcaption3 p 
-{
-	padding-left: 20px;
-}
 
 
-
-/* image 4 & div 2*/
-
-.activities_figure4
-{
-	box-shadow: 1px 1px 12px #cac7c6;
-	border-radius: 25px;
-	margin-left: 0px;
-	height: 501px;
-	width: 300px;
-}
-
-.activities_img4
-{
-	object-fit: cover;
-	height: 442px;
-	width: 300px;
-	border-top-left-radius: 25px;
-	border-top-right-radius: 25px;
-}
-
-.activities_figcaption4
-{
-    background-color: #FFF;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-}
-
-.activities_figcaption4 p 
-{
-	padding-left: 20px;
-}
-
-
-
-/* image 5 & div 3 */
+/* image 5 */
 
 .activities_figure5
 {
+	height: 208px;
+	width: 300px;
+	margin-left: 0px; 
+	margin-bottom: 30px;
 	box-shadow: 1px 1px 12px #cac7c6;
 	border-radius: 25px;
-	height: 208px;
-	margin-bottom: 30px;
-	margin-left: 0px; 
-	width: 300px;
 }
 
 .activities_img5
@@ -608,50 +546,26 @@ header
 	border-top-right-radius: 25px;
 }
 
-.activities_figcaption5
-{
-    background-color: #FFF;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-}
-
-.activities_figcaption5 p 
-{
-	padding-left: 20px;
-}
-
 
 
 /* image 6 */
 
 .activities_figure6
 {
+	height: 250px;
+	width: 300px;
+	margin-left: 0px; 
 	box-shadow: 1px 1px 12px #cac7c6;
 	border-radius: 25px;
-	height: 281px;
-	margin-left: 0px; 
-	width: 300px;
 }
 
 .activities_img6
 {
 	object-fit: cover;
-	height: 220px;
+	height: 187px;
 	width: 300px;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px;
-}
-
-.activities_figcaption6
-{
-    background-color: #FFF;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-}
-
-.activities_figcaption6 p 
-{
-	padding-left: 20px;
 }
 
 
