correction de faute d'orthogrpahe + test pour la petite resolution

--- a/style.css
+++ b/style.css
@@ -610,6 +610,16 @@ footer
 
 
 
+/* small resolution */
+
+/* .container_1-2 */
+/* { */
+	/* display: flex; */
+/* } */
+
+
+
+
 /* corriger les erreurs html que le site W3C va donner */
 
 
