--- a/small_resolution.css
+++ b/small_resolution.css
@@ -1,6 +1,12 @@
 @media screen and (max-width: 1280px)
 {
 	
+	{
+		/* .container_1-2 */
+		/* { */
+			/* flex-flow: column; */
+		/* } */
+	}
 }
 
 
